# rpg_svo_example

./: README.md
svo_ros/: CMakeLists.txt  package.xml  rviz_ba.rviz  rviz_config.rviz
svo_ros/calib/: bluefox_25000742_pinhole.yaml  bluefox_25000826_equi.yaml  euroc_mono_calib.yaml  euroc_stereo_calib.yaml  svo_test_pinhole.yaml
svo_ros/doc/: advanced.md  camera_calibration.md  euroc.md  get_started.md  install.md  run_on_arm.md  run_with_gtsam.md  run_with_msf.md
svo_ros/include/svo_ros/: backend_visualizer.h  svo_factory.h  svo_interface.h  visualizer.h
svo_ros/launch/: euroc_mono_imu.launch  euroc_stereo_imu.launch  fla_stereo_imu.launch  live.launch  live_nodelet.launch  live_nodelet_fisheye.launch  run_from_bag.launch  run_from_topic.launch  run_from_topic_arm.launch  svo_gtsam.launch  svo_msf_mono.launch
svo_ros/param/: camera_cern_vi.yaml  euroc_gtsam.yaml  euroc_mono_imu.yaml  euroc_stereo_imu.yaml  fast_pinhole.yaml  fisheye.yaml  fla_stereo_imu.yaml  pinhole.yaml  svo_msf.yaml  vo_fast.yaml
svo_ros/scripts/: setupros_ip_arm.sh  setupros_ip_pc.sh
svo_ros/src/: svo_factory.cpp  svo_interface.cpp  svo_node.cpp  visualizer.cpp
